fixed styling of center and box elements when aligned

--- a/src/styles/elements/main.module.scss
+++ b/src/styles/elements/main.module.scss
@@ -1,6 +1,9 @@
 @import '../colors.scss';
 
 .center {
+    flex: 1;
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,6 +24,7 @@
 }
 
 .link {
+    display: inline-flex;
     color: map-get($cobalt-palette, darkest);
     cursor: pointer;
 
@@ -42,6 +46,10 @@
 
     & > *:not(:last-child) {
         margin-right: 5px;
+    }
+
+    & > .box {
+        width: fit-content;
     }
 
     &[direction=V] {
@@ -98,4 +106,10 @@
     width: 100%;
     height: 100%;
     flex: 1;
+}
+
+.box {
+    border: 1px solid map-get($cobalt-palette, border);
+    background: map-get($cobalt-palette, lightest);
+    padding: 5px;
 }
